icon vertical alignment fixed

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -59,4 +59,8 @@ TODO: Icons are not working yet with Phytoplankton
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  // needed to align icons vertically middle
+  // source: http://www.sitepoint.com/creating-custom-icon-font-icomoon-less/
+  vertical-align: -10%;
 }
